--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,5 +15,11 @@ body {
       list-style: none;
       line-height: 200%;
     }
+
+    img {
+      width: 200px;
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 }
