Add list to hello/there

--- a/templates/hello.hbs
+++ b/templates/hello.hbs
@@ -8,6 +8,13 @@
     <a href="{{>URL}}"> Home </a>
   </p>
 
+  <p>
+    List:
+    {{#each list}}
+    {{this}}
+    {{/each}}
+  </p>
+
 </main>
 
 {{/boilerplate}}
