Rename boilerplate styles

--- a/templates/boilerplate.hbs
+++ b/templates/boilerplate.hbs
@@ -5,8 +5,8 @@
     <title> Unreact Template </title>
     {{!-- Icon in public folder --}}
     {{>ICON name="icon.png"}}
-    {{!-- Global styles --}}
-    {{>CSS name="global"}}
+    {{!-- Boilerplate styles --}}
+    {{>CSS name="boilerplate"}}
 </head>
 
 <body>
