--- a/templates/404.hbs
+++ b/templates/404.hbs
@@ -2,11 +2,11 @@
 
 <main>
 
-  <h1>404 - Not found</h1>
+    <h1>404 - Not found</h1>
 
-  <p>
-    <a href="{{>URL}}"> Home </a>
-  </p>
+    <p>
+        <a href="{{URL}}"> Home </a>
+    </p>
 
 </main>
 
