--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -2,28 +2,28 @@
 
 <main>
 
-  <h1>Unreact Template</h1>
+    <h1>Unreact Template</h1>
 
-  <p>
-    Learn more at <a href="https://crates.io/crates/unreact">Crates.io</a>
-  </p>
+    <p>
+        Learn more at <a href="https://crates.io/crates/unreact">Crates.io</a>
+    </p>
 
-  <p>
-    Secret message: <em> '{{secret}}' </em>
-  </p>
+    <p>
+        Secret message: <em> '{{secret}}' </em>
+    </p>
 
-  <div>
-    <h2> Other pages </h2>
+    <div>
+        <h2> Other pages </h2>
 
-    <ul class="list">
-      <li><a href="{{>URL}}/hello/there"> Hello There </a></li>
-      <li><a href="{{>URL}}/not/a/real/path"> 404 Example </a></li>
-    </ul>
-  </div>
+        <ul class="list">
+            <li><a href="{{URL}}hello/there"> Hello There </a></li>
+            <li><a href="{{URL}}not/a/real/path"> 404 Example </a></li>
+        </ul>
+    </div>
 
-  <br />
+    <br />
 
-  <img src="{{>URL}}/public/icon.png" alt="Unreact Icon" />
+    <img src="{{URL}}public/icon.png" alt="Unreact Icon" />
 
 </main>
 
