Clean code and remove old stuff

--- a/templates/boilerplate.hbs
+++ b/templates/boilerplate.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head> {{>META}}
-    <title> Unreact Template </title>
+    <title> My Unreact App </title>
     {{!-- Icon in public folder --}}
     {{>ICON name="icon.png"}}
     {{!-- Boilerplate styles --}}
