Update Unreact to `0.5.4`, Fix naming convention, Remove todo

--- a/assets/templates/boilerplate.hbs
+++ b/assets/templates/boilerplate.hbs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> {{>META}}
+<head>
+    {{>META}}
+
     <title> My Unreact App </title>
-    {{!-- Icon in public folder --}}
+
     {{>ICON name="icon.png"}}
-    {{!-- Boilerplate styles --}}
+
     {{>CSS name="boilerplate"}}
 </head>
 
