--- a/assets/templates/~.hbs
+++ b/assets/templates/~.hbs
@@ -13,12 +13,12 @@
     </p>
 
     <p>
-        <a href="{{>URL}}/not/a/real/path"> 404 Example </a>
+        <a href="{{URL}}/not/a/real/path"> 404 Example </a>
     </p>
 
     <br />
 
-    <img src="{{>URL}}/public/icon.png" alt="Unreact Icon" />
+    <img src="{{URL}}/public/icon.png" alt="Unreact Icon" />
 
 </main>
 
